[workspace]
members  = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version       = "0.0.0"
authors       = ["Larry Lyu <gm@larry.engineer>"]
edition       = "2021"
rust-version  = "1.68.0"
license       = "Apache-2.0"
homepage      = "https://larry.engineer"
repository    = "https://github.com/larry0x/abstract-account"
documentation = "https://github.com/larry0x/abstract-account#readme"
keywords      = ["blockchain", "cosmos", "cosmwasm", "account-abstraction"]

[workspace.dependencies]
cosmos-sdk-proto = { version = "0.23.0", default-features = false }
cosmwasm-schema  = "2.1.1"
cosmwasm-std     = { version = "2.1.1", features = ["stargate", "cosmwasm_2_1"] }
cw2              = "2.0.0"
cw-storage-plus  = "2.0.0"
cw-utils         = "2.0.0"
hex              = "0.4"
prost            = "0.13.1"
sha2             = "0.10"
thiserror        = "1"
tiny-keccak      = { version = "2", features = ["keccak"] }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
